--- a/styles/bio.css
+++ b/styles/bio.css
@@ -2,8 +2,10 @@
   font-family: "Nunito Sans";
   src: url("../../assets/Font/NunitoSans-Regular.woff") format("woff");
 }
+/* Variables */
 body {
   font-family: "Nunito Sans";
+  margin: 0;
 }
 
 h1, h2 {
@@ -18,4 +20,36 @@ h3 {
 p {
   font-size: 0.8rem;
   font-weight: 400;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #323232;
+}
+nav .nav-subheading {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.hero-section {
+  width: 100%;
+  height: 70vw;
+  background-image: url("../assets/Images/hero-bio.jpg");
+  background-size: cover;
+}
+
+footer {
+  padding: 1rem;
+}
+
+.about-section__img {
+  width: 100%;
+}
+
+.photo-gallery img {
+  width: 100%;
 }/*# sourceMappingURL=bio.css.map */
