--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -13,3 +13,42 @@ p {
     font-size: 0.8rem;
     font-weight: 400;
 }
+
+nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: $black;
+
+    .nav-subheading {
+        display: flex;
+        justify-content: space-evenly;
+        width: 100%;
+    }
+    
+
+}
+
+.hero-section {
+    width: 100%;
+    height: 70vw;
+    background-image: url("../assets/Images/hero-bio.jpg");
+    background-size: cover;
+}
+
+footer {
+    padding: 1rem;
+}
+
+.about-section {
+    &__img {
+        width: 100%;
+    }
+}
+
+.photo-gallery {
+    img {
+        width: 100%;
+    }
+}
