--- a/styles/bio.css
+++ b/styles/bio.css
@@ -28,6 +28,10 @@ nav {
   align-items: center;
   flex-direction: column;
   background-color: #323232;
+  color: #FFFFFF;
+}
+nav h1 {
+  margin-bottom: 0;
 }
 nav .nav-subheading {
   display: flex;
@@ -36,10 +40,22 @@ nav .nav-subheading {
 }
 
 .hero-section {
+  background-color: #323232;
+  z-index: 2;
+}
+.hero-section .hero-section__text {
   width: 100%;
   height: 70vw;
   background-image: url("../assets/Images/hero-bio.jpg");
   background-size: cover;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  color: #FFFFFF;
+}
+.hero-section .hero-section__text h1 {
+  margin-top: 0;
+  padding-left: 1rem;
 }
 
 footer {
