--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -20,6 +20,11 @@ nav {
     align-items: center;
     flex-direction: column;
     background-color: $black;
+    color: $white;
+
+    h1 {
+        margin-bottom: 0;
+    }
 
     .nav-subheading {
         display: flex;
@@ -31,11 +36,26 @@ nav {
 }
 
 .hero-section {
-    width: 100%;
-    height: 70vw;
-    background-image: url("../assets/Images/hero-bio.jpg");
-    background-size: cover;
+    background-color: $black;
+    z-index: 2;
+
+    .hero-section__text {
+        width: 100%;
+        height: 70vw;
+        background-image: url("../assets/Images/hero-bio.jpg");
+        background-size: cover;
+        z-index: 1;
+        display: flex;
+        align-items: center;
+        color: $white;
+
+        h1 {
+            margin-top: 0;
+            padding-left: 1rem;
+        }
+    }
 }
+
 
 footer {
     padding: 1rem;
