--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,74 +1,128 @@
-@use './partials/global' as *;
+@use "./partials/global" as *;
 
-h1, h2 {
-    font-size: 1.5rem;
+h1,
+h2 {
+  font-size: 1.5rem;
 }
 
 h3 {
-    font-size: 1rem;
-    font-weight: 600;
+  font-size: 1rem;
+  font-weight: 600;
 }
 
 p {
-    font-size: 0.8rem;
-    font-weight: 400;
+  font-size: 0.8rem;
+  font-weight: 400;
 }
 
 nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: $black;
+  color: $white;
+
+  h1 {
+    margin-bottom: 0;
+  }
+
+  .nav-subheading {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: $black;
-    color: $white;
+    justify-content: space-evenly;
+    width: 100%;
 
-    h1 {
-        margin-bottom: 0;
-    }
-
-    .nav-subheading {
-        display: flex;
-        justify-content: space-evenly;
+    h3 {
         width: 100%;
+        text-align: center;
+        font-weight: 500;
+        padding: 1rem;
+        margin: 0;
     }
-    
 
+    h3:hover {
+        font-weight: 800;
+        border-bottom: solid $white 0.2rem;
+        padding-bottom: 0.01rem;
+
+    }
+  }
 }
 
 .hero-section {
+  width: 100%;
+  height: 70vw;
+  background-image: url("../assets/Images/hero-bio.jpg");
+  background-size: cover;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  color: $white;
+  z-index: 1;
+
+  .hero-section__overlay {
+    position: absolute;
     background-color: $black;
+    opacity: 50%;
+    width: 100%;
+    height: 70vw;
+    color: transparent;
     z-index: 2;
+  }
 
-    .hero-section__text {
-        width: 100%;
-        height: 70vw;
-        background-image: url("../assets/Images/hero-bio.jpg");
-        background-size: cover;
-        z-index: 1;
-        display: flex;
-        align-items: center;
-        color: $white;
-
-        h1 {
-            margin-top: 0;
-            padding-left: 1rem;
-        }
-    }
-}
-
-
-footer {
-    padding: 1rem;
+  h1 {
+    margin-top: 0;
+    padding-left: 1rem;
+    z-index: 3;
+  }
 }
 
 .about-section {
-    &__img {
-        width: 100%;
-    }
+  padding: 1rem;
+  padding-bottom: 0;
+
+  &__img {
+    width: 100%;
+  }
+
+  h3 {
+    line-height: 2rem;
+  }
+}
+
+.band-description {
+  padding: 1rem;
+  padding-top: 0;
+
+  h3 {
+    font-size: 1.2rem;
+    font-weight: 500;
+  }
+
+  p {
+    line-height: 1.2rem;
+    font-size: 1rem;
+  }
 }
 
 .photo-gallery {
-    img {
-        width: 100%;
-    }
+  padding: 1rem;
+  background-color: $alabaster;
+
+  img {
+    width: 100%;
+    padding-bottom: 1rem;
+  }
+}
+
+footer {
+  padding: 1rem;
+  background-color: $black;
+  color: $white;
+
+  .icons {
+    display: flex;
+    gap: 10%;
+  }
+
 }
