--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -125,4 +125,24 @@ footer {
     gap: 10%;
   }
 
+  p {
+      margin: 0;
+  }
+  
+  section {
+    p {
+      margin: 0;
+    }
+
+    .email {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    h2 {
+      margin-top: 3rem;
+    }
+
+
+  }
 }
