Fix tablet display until before photo gallery

--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,3 +1,5 @@
+/* Mixins */
+/* Fonts */
 @font-face {
   font-family: "Nunito Sans";
   src: url("../../assets/Font/NunitoSans-Regular.woff") format("woff");
@@ -12,14 +14,20 @@ h1,
 h2 {
   font-size: 1.5rem;
 }
+@media (min-width: 768px) {
+  h1,
+  h2 {
+    font-size: 3rem;
+  }
+}
 
 h3 {
-  font-size: 1rem;
+  font-size: 2.2rem;
   font-weight: 600;
 }
 
 p {
-  font-size: 0.8rem;
+  font-size: 1rem;
   font-weight: 400;
 }
 
@@ -31,22 +39,53 @@ nav {
   background-color: #323232;
   color: #FFFFFF;
 }
-nav h1 {
+@media (min-width: 768px) {
+  nav {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    align-items: baseline;
+  }
+  nav h1 {
+    padding: 1.5rem;
+    padding-right: 2.5rem;
+    margin-top: 0;
+    font-size: 2rem;
+  }
+}
+
+h1 {
   margin-bottom: 0;
 }
-nav .nav-subheading {
+
+.nav-subheading {
   display: flex;
   justify-content: space-evenly;
   width: 100%;
 }
-nav .nav-subheading h3 {
+@media (min-width: 768px) {
+  .nav-subheading {
+    display: flex;
+    justify-content: flex-start;
+    width: 15%;
+    height: 100%;
+  }
+}
+.nav-subheading h3 {
   width: 100%;
   text-align: center;
   font-weight: 500;
   padding: 1rem;
   margin: 0;
 }
-nav .nav-subheading h3:hover {
+@media (min-width: 768px) {
+  .nav-subheading h3 {
+    text-align: center;
+    font-size: 1rem;
+    padding: 2rem;
+  }
+}
+.nav-subheading h3:hover {
   font-weight: 800;
   border-bottom: solid #FFFFFF 0.2rem;
   padding-bottom: 0.01rem;
@@ -85,13 +124,41 @@ nav .nav-subheading h3:hover {
 .about-section__img {
   width: 100%;
 }
+@media (min-width: 768px) {
+  .about-section__img {
+    padding: 2.2rem;
+    padding-bottom: 0;
+    padding-top: 0;
+    box-sizing: border-box;
+  }
+}
 .about-section h3 {
   line-height: 2rem;
+}
+@media (min-width: 768px) {
+  .about-section h3 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
 }
 
 .band-description {
   padding: 1rem;
   padding-top: 0;
+}
+@media (min-width: 768px) {
+  .band-description {
+    display: flex;
+    flex-direction: column;
+    padding: 4rem;
+  }
+  .band-description .band-description__text {
+    display: flex;
+    gap: 2.5%;
+  }
+  .band-description .band-description__text p {
+    line-height: 1.5rem;
+  }
 }
 .band-description h3 {
   font-size: 1.2rem;
@@ -110,7 +177,6 @@ nav .nav-subheading h3:hover {
   width: 100%;
   padding-bottom: 1rem;
 }
-
 footer {
   padding: 1rem;
   background-color: #323232;
