Finish full website design

--- a/styles/bio.css
+++ b/styles/bio.css
@@ -52,6 +52,15 @@ nav {
     margin-top: 0;
     font-size: 2rem;
   }
+  nav h1 a {
+    text-decoration: none;
+    color: #FFFFFF;
+  }
+}
+@media (min-width: 1280px) {
+  nav h1 {
+    padding-left: 5rem;
+  }
 }
 
 h1 {
@@ -77,6 +86,7 @@ h1 {
   font-weight: 500;
   padding: 1rem;
   margin: 0;
+  font-size: 1rem;
 }
 @media (min-width: 768px) {
   .nav-subheading h3 {
@@ -102,6 +112,11 @@ h1 {
   color: #FFFFFF;
   z-index: 1;
 }
+@media (min-width: 1280px) {
+  .hero-section {
+    height: 50vw;
+  }
+}
 .hero-section .hero-section__overlay {
   position: absolute;
   background-color: #323232;
@@ -111,15 +126,31 @@ h1 {
   color: transparent;
   z-index: 2;
 }
+@media (min-width: 1280px) {
+  .hero-section .hero-section__overlay {
+    height: 50vw;
+  }
+}
 .hero-section h1 {
   margin-top: 0;
   padding-left: 1rem;
   z-index: 3;
 }
+@media (min-width: 1280px) {
+  .hero-section h1 {
+    padding-left: 5rem;
+  }
+}
 
 .about-section {
   padding: 1rem;
   padding-bottom: 0;
+}
+@media (min-width: 1280px) {
+  .about-section {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
 }
 .about-section__img {
   width: 100%;
@@ -132,6 +163,13 @@ h1 {
     box-sizing: border-box;
   }
 }
+@media (min-width: 1280px) {
+  .about-section__img {
+    padding: 6rem;
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+  }
+}
 .about-section h3 {
   line-height: 2rem;
 }
@@ -139,6 +177,14 @@ h1 {
   .about-section h3 {
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+}
+@media (min-width: 1280px) {
+  .about-section h3 {
+    padding-left: 6rem;
+    padding-right: 6rem;
+    box-sizing: border-box;
+    font-size: 1.5rem;
   }
 }
 
@@ -151,6 +197,8 @@ h1 {
     display: flex;
     flex-direction: column;
     padding: 4rem;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
   }
   .band-description .band-description__text {
     display: flex;
@@ -160,34 +208,170 @@ h1 {
     line-height: 1.5rem;
   }
 }
+@media (min-width: 1280px) {
+  .band-description {
+    padding-left: 11rem;
+    padding-right: 11rem;
+    padding-top: 1rem;
+  }
+}
 .band-description h3 {
   font-size: 1.2rem;
   font-weight: 500;
 }
+@media (min-width: 1280px) {
+  .band-description h3 {
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
+}
 .band-description p {
   line-height: 1.2rem;
   font-size: 1rem;
+}
+@media (min-width: 1280px) {
+  .band-description p {
+    line-height: 1.8rem;
+  }
 }
 
 .photo-gallery {
   padding: 1rem;
   background-color: #FAFAFA;
 }
+@media (min-width: 1280px) {
+  .photo-gallery {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+}
 .photo-gallery img {
   width: 100%;
   padding-bottom: 1rem;
 }
+@media (min-width: 768px) {
+  .photo-gallery {
+    display: flex;
+    flex-direction: column;
+  }
+  .photo-gallery h2 {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    padding-left: 0.8rem;
+  }
+  .photo-gallery .photo-gallery__images {
+    width: 30%;
+    display: flex;
+  }
+  .photo-gallery .photo-gallery__images img {
+    margin: 0.8rem;
+  }
+}
+
 footer {
   padding: 1rem;
   background-color: #323232;
   color: #FFFFFF;
 }
+footer h3 {
+  font-size: 1rem;
+}
+footer .bandsite-logo {
+  display: none;
+}
+@media (min-width: 768px) {
+  footer .bandsite-logo {
+    display: flex;
+    justify-content: flex-end;
+  }
+}
+@media (min-width: 1280px) {
+  footer {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+}
+@media (min-width: 768px) {
+  footer .bandsite-bottom {
+    flex-basis: 100%;
+  }
+  footer .bandsite-bottom p {
+    font-size: 0.8rem;
+  }
+  footer .bandsite-bottom .bandsite-bottom__logo {
+    display: none;
+  }
+  footer .bandsite-logo {
+    flex-grow: 1;
+  }
+  footer .bandsite-logo h1 {
+    margin-top: 2.7rem;
+    display: flex;
+    justify-content: end;
+    font-weight: 500;
+    font-size: 1.5rem;
+  }
+  footer h1 {
+    font-size: 2.5rem;
+    flex-grow: 0;
+    height: 40%;
+  }
+  footer .footer-section-body {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    gap: 5%;
+  }
+}
+@media (min-width: 768px) and (min-width: 1280px) {
+  footer .footer-section-body {
+    justify-content: flex-start;
+    gap: 0%;
+  }
+  footer .footer-section-body section {
+    flex-basis: 25%;
+  }
+}
+@media (min-width: 768px) {
+  footer .footer-section-body section h3 {
+    font-size: 0.8rem;
+  }
+  footer .footer-section-body section p {
+    font-size: 0.8rem;
+  }
+}
 footer .icons {
   display: flex;
   gap: 10%;
 }
+@media (min-width: 768px) {
+  footer .icons {
+    gap: 0%;
+  }
+}
+@media (min-width: 1280px) {
+  footer .icons {
+    gap: 0%;
+  }
+}
+footer .icons img {
+  padding-top: 1rem;
+  height: 2rem;
+}
+@media (min-width: 768px) {
+  footer .icons {
+    height: auto;
+  }
+}
 footer p {
   margin: 0;
+}
+@media (min-width: 768px) {
+  footer section {
+    flex-basis: 30%;
+  }
 }
 footer section p {
   margin: 0;
@@ -198,4 +382,39 @@ footer section .email {
 }
 footer section h2 {
   margin-top: 3rem;
+}
+@media (min-width: 768px) {
+  footer section h3 {
+    font-size: 1.1rem;
+  }
+}
+@media (min-width: 768px) {
+  footer {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  footer .icons {
+    max-width: 20%;
+    align-items: end;
+    justify-content: space-between;
+    padding-bottom: 0.8rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  footer .icons img {
+    width: 100%;
+  }
+}
+@media (min-width: 768px) and (min-width: 768px) {
+  footer .icons img {
+    width: auto;
+    height: 50%;
+    display: flex;
+    align-items: end;
+  }
+}
+@media (min-width: 768px) and (min-width: 1280px) {
+  footer .icons img {
+    margin-left: 20%;
+  }
 }/*# sourceMappingURL=bio.css.map */
