--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -38,8 +38,20 @@ nav {
       padding-right: 2.5rem;
       margin-top: 0;
       font-size: 2rem;
+      
+      a {
+        text-decoration: none;
+        color: $white;
+      }
     }
   }
+
+  @include desktop {
+    h1 {
+      padding-left: 5rem;
+    }
+  }
+
 }
 
 h1 {
@@ -64,6 +76,7 @@ h1 {
     font-weight: 500;
     padding: 1rem;
     margin: 0;
+    font-size: 1rem;
 
     @include tablet {
       text-align: center;
@@ -76,8 +89,6 @@ h1 {
     font-weight: 800;
     border-bottom: solid $white 0.2rem;
     padding-bottom: 0.01rem;
-
-
   }
 }
 
@@ -92,6 +103,10 @@ h1 {
   color: $white;
   z-index: 1;
 
+  @include desktop {
+    height: 50vw;
+  }
+
   .hero-section__overlay {
     position: absolute;
     background-color: $black;
@@ -102,10 +117,23 @@ h1 {
     z-index: 2;
   }
 
+  @include desktop {
+    .hero-section__overlay {
+      height: 50vw;
+    }
+
+
+  }
+
   h1 {
     margin-top: 0;
     padding-left: 1rem;
     z-index: 3;
+
+    @include desktop {
+      padding-left: 5rem;
+    }
+
   }
 }
 
@@ -113,14 +141,28 @@ h1 {
   padding: 1rem;
   padding-bottom: 0;
 
+  @include desktop {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
   &__img {
     width: 100%;
+
     @include tablet {
       padding: 2.2rem;
       padding-bottom: 0;
       padding-top: 0;
       box-sizing: border-box;
     }
+
+    @include desktop {
+      padding: 6rem;
+      padding-bottom: 2rem;
+      padding-top: 2rem;
+
+    }
+
   }
 
   h3 {
@@ -129,6 +171,13 @@ h1 {
     @include tablet {
       padding-left: 4rem;
       padding-right: 4rem;
+    }
+
+    @include desktop {
+      padding-left: 6rem;
+      padding-right: 6rem;
+      box-sizing: border-box;
+      font-size: 1.5rem;
     }
   }
 }
@@ -141,6 +190,8 @@ h1 {
     display: flex;
     flex-direction: column;
     padding: 4rem;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
 
     .band-description__text {
       display: flex;
@@ -152,20 +203,44 @@ h1 {
     }
   }
 
+  @include desktop {
+    padding-left: 11rem;
+    padding-right: 11rem;
+    padding-top: 1rem;
+  }
+
   h3 {
     font-size: 1.2rem;
     font-weight: 500;
+  
+    @include desktop {
+      font-size: 1.5rem;
+      font-weight: 700;
+    }
+
   }
 
   p {
     line-height: 1.2rem;
     font-size: 1rem;
+  
+    @include desktop {
+      line-height: 1.8rem;
+    }
+
   }
+
 }
 
 .photo-gallery {
   padding: 1rem;
-  background-color: $alabaster;
+  background-color: $alabaster;  
+
+  @include desktop {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+  
 
   img {
     width: 100%;
@@ -173,10 +248,113 @@ h1 {
   }
 
   @include tablet {
+    display: flex;
+    flex-direction: column;
+
+    h2 {
+      margin-top: 1.5rem;
+      margin-bottom: 1.5rem;
+      padding-left: 0.8rem;
+    }
+
+    .photo-gallery__images {
+      width: 30%;
+      display: flex;
+
+      img {
+        margin: 0.8rem;
+      }
+    }
+
   }
 }
 
 footer {
+
+  h3 {
+    font-size: 1rem;
+  }
+
+  .bandsite-logo {
+    display: none;
+
+    @include tablet {
+      display: flex;
+      justify-content: flex-end;
+    }
+  }
+
+
+  @include desktop {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  @include tablet {
+
+    .bandsite-bottom {
+      flex-basis: 100%;
+
+      p {
+        font-size: 0.8rem;
+      }
+
+      .bandsite-bottom__logo {
+        display: none;
+      }
+    }
+
+    .bandsite-logo {
+      flex-grow: 1;
+
+      h1 {
+        margin-top: 2.7rem;
+        display: flex;
+        justify-content: end;
+        font-weight: 500;
+        font-size: 1.5rem;
+      }
+
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      flex-grow: 0;
+      height: 40%;
+    }
+
+    .footer-section-body {
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      gap: 5%;
+
+      @include desktop {
+        justify-content: flex-start;
+        gap: 0%;
+
+        section {
+          flex-basis: 25%;
+        }
+      }
+
+      section {
+        h3 {
+          font-size: 0.8rem;
+        }
+
+        p {
+          font-size: 0.8rem;
+        }
+
+      }
+
+    }
+
+  }
+  
   padding: 1rem;
   background-color: $black;
   color: $white;
@@ -184,6 +362,24 @@ footer {
   .icons {
     display: flex;
     gap: 10%;
+
+    @include tablet {
+      gap: 0%;
+    }
+
+    @include desktop {
+      gap: 0%;
+    }
+    
+    img {
+      padding-top: 1rem;
+      height: 2rem;
+    }
+
+    @include tablet {
+      height: auto;
+    }
+
   }
 
   p {
@@ -191,6 +387,11 @@ footer {
   }
 
   section {
+
+    @include tablet {
+      flex-basis: 30%;
+    }
+
     p {
       margin: 0;
     }
@@ -202,6 +403,44 @@ footer {
 
     h2 {
       margin-top: 3rem;
+
+    }
+
+    @include tablet {
+     h3 {
+      font-size: 1.1rem;
+     }   
     }
   }
+
+  @include tablet {
+    display: flex;
+    flex-wrap: wrap;
+
+    .icons {
+      max-width: 20%;
+      align-items: end;
+      justify-content: space-between;
+      padding-bottom: 0.8rem;
+      padding-left: 1rem;
+      padding-right: 1rem;
+      
+      img {
+        width: 100%;
+
+        @include tablet {
+          width: auto;
+          height: 50%;
+          display: flex;
+          align-items: end;
+        }
+
+        @include desktop {
+          margin-left: 20%;
+        }
+
+      }
+    }
+  }
+
 }
