--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,96 +1,5 @@
 @use "./partials/global" as *;
 
-h1,
-h2 {
-  font-size: 1.5rem;
-
-  @include tablet {
-    font-size: 3rem;
-  }
-}
-
-h3 {
-  font-size: 2.2rem;
-  font-weight: 600;
-}
-
-p {
-  font-size: 1rem;
-  font-weight: 400;
-}
-
-nav {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  background-color: $black;
-  color: $white;
-
-  a {
-    text-decoration: none;
-    color: $white;
-  }
-
-  @include tablet {
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: row;
-    align-items: baseline;
-
-    h1 {
-      padding: 1.5rem;
-      padding-right: 2.5rem;
-      margin-top: 0;
-      font-size: 2rem;
-    }
-  }
-
-  @include desktop {
-    h1 {
-      padding-left: 5rem;
-    }
-  }
-}
-
-h1 {
-  margin-bottom: 0;
-}
-
-.nav-subheading {
-  display: flex;
-  justify-content: space-evenly;
-  width: 100%;
-
-  @include tablet {
-    display: flex;
-    justify-content: flex-start;
-    width: 15%;
-    height: 100%;
-  }
-
-  h3 {
-    width: 100%;
-    text-align: center;
-    font-weight: 500;
-    padding: 1rem;
-    margin: 0;
-    font-size: 1rem;
-
-    @include tablet {
-      text-align: center;
-      font-size: 1rem;
-      padding: 2rem;
-    }
-  }
-
-  h3:hover {
-    font-weight: 800;
-    border-bottom: solid $white 0.2rem;
-    padding-bottom: 0.01rem;
-  }
-}
-
 .hero-section {
   width: 100%;
   height: 70vw;
@@ -258,11 +167,26 @@ h1 {
   }
 }
 
+.comment-section-header {
+  padding-left: 1rem;
+}
+@include tablet {
+  .comment-section-header {
+    padding-left: 2rem;
+  } 
+  
+}
+
 .comment-section {
   display: flex;
   flex-direction: column;
   padding-left: 1rem;
   padding-right: 1rem;
+
+  @include tablet {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
 
   div {
     display: flex;
@@ -286,6 +210,12 @@ h1 {
         border: $mercury 1px solid;
         background-color: $alabaster;
         margin-bottom: 1rem;
+
+        @include tablet {
+          height: 3.5rem;
+          font-size: 1rem;
+          padding-left: 1rem;
+        }
       }
 
       #comments {
@@ -295,6 +225,13 @@ h1 {
         border: $mercury 1px solid;
         background-color: $alabaster;
         margin-bottom: 1rem;
+
+        @include tablet {
+          height: 7rem;
+          font-size: 1rem;
+          padding-left: 1rem;
+          padding-top: 1rem;
+        }
 
       }
 
@@ -332,6 +269,7 @@ h1 {
   flex-direction: column;
   margin-bottom: 1rem;
   border-bottom: 2px $mercury solid;
+  
 
   img {
     width: 3rem;
