--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,12 +1,16 @@
 /* Mixins */
 /* Fonts */
 @font-face {
-  font-family: "Nunito Sans";
+  font-family: "NunitoSans-Regular";
   src: url("../../assets/Font/NunitoSans-Regular.woff") format("woff");
+}
+@font-face {
+  font-family: "NunitoSans-Bold";
+  src: url("../../assets/Font/NunitoSans-Bold.woff") formar("woff");
 }
 /* Variables */
 body {
-  font-family: "Nunito Sans";
+  font-family: "NunitoSans-Regular", "NunitoSans-Bold";
   margin: 0;
 }
 
@@ -37,11 +41,11 @@ nav {
   align-items: center;
   flex-direction: column;
   background-color: #323232;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 nav a {
   text-decoration: none;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 @media (min-width: 768px) {
   nav {
@@ -76,6 +80,12 @@ h1 {
   justify-content: space-evenly;
   width: 100%;
 }
+.nav-subheading h3.active {
+  border-bottom: #ffffff solid 0.2rem;
+}
+.nav-subheading h3 {
+  text-decoration: none;
+}
 @media (min-width: 768px) {
   .nav-subheading {
     display: flex;
@@ -91,6 +101,7 @@ h1 {
   padding: 1rem;
   margin: 0;
   font-size: 1rem;
+  border-bottom: 0.1rem solid transparent;
 }
 @media (min-width: 768px) {
   .nav-subheading h3 {
@@ -101,14 +112,13 @@ h1 {
 }
 .nav-subheading h3:hover {
   font-weight: 800;
-  border-bottom: solid #FFFFFF 0.2rem;
-  padding-bottom: 0.01rem;
+  border-bottom-color: #ffffff;
 }
 
 footer {
   padding: 1rem;
   background-color: #323232;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 footer h3 {
   font-size: 1rem;
@@ -264,7 +274,7 @@ footer section h2 {
   z-index: 1;
   display: flex;
   align-items: center;
-  color: #FFFFFF;
+  color: #ffffff;
   z-index: 1;
 }
 @media (min-width: 1280px) {
@@ -392,7 +402,7 @@ footer section h2 {
 
 .photo-gallery {
   padding: 1rem;
-  background-color: #FAFAFA;
+  background-color: #fafafa;
 }
 @media (min-width: 1280px) {
   .photo-gallery {
@@ -432,6 +442,11 @@ footer section h2 {
     padding-left: 2rem;
   }
 }
+@media (min-width: 768px) and (min-width: 1280px) {
+  .comment-section-header {
+    padding-left: 6rem;
+  }
+}
 .comment-section {
   display: flex;
   flex-direction: column;
@@ -442,6 +457,12 @@ footer section h2 {
   .comment-section {
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+}
+@media (min-width: 768px) and (min-width: 1280px) {
+  .comment-section {
+    padding-left: 25rem;
+    padding-right: 25rem;
   }
 }
 .comment-section div {
@@ -462,8 +483,8 @@ footer section h2 {
   font-family: "Nunito Sans", sans-serif;
   height: 2rem;
   border-radius: 4px;
-  border: #E1E1E1 1px solid;
-  background-color: #FAFAFA;
+  border: #e1e1e1 1px solid;
+  background-color: #fafafa;
   margin-bottom: 1rem;
 }
 @media (min-width: 768px) {
@@ -477,8 +498,8 @@ footer section h2 {
   font-family: "Nunito Sans", sans-serif;
   height: 6rem;
   border-radius: 4px;
-  border: #E1E1E1 1px solid;
-  background-color: #FAFAFA;
+  border: #e1e1e1 1px solid;
+  background-color: #fafafa;
   margin-bottom: 1rem;
 }
 @media (min-width: 768px) {
@@ -493,7 +514,7 @@ footer section h2 {
   margin-bottom: 1rem;
   background-color: #323232;
   border-radius: 4px;
-  color: #FFFFFF;
+  color: #ffffff;
   padding: 0.5rem;
   font-size: 1rem;
 }
@@ -510,14 +531,14 @@ footer section h2 {
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
-  background-color: #E1E1E1;
+  background-color: #e1e1e1;
 }
 
 #comments-list {
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
-  border-bottom: 2px #E1E1E1 solid;
+  border-bottom: 2px #e1e1e1 solid;
 }
 #comments-list img {
   width: 3rem;
@@ -545,7 +566,7 @@ footer section h2 {
 }
 
 .big-div {
-  border-top: 2px #E1E1E1 solid;
+  border-top: 2px #e1e1e1 solid;
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
@@ -553,7 +574,7 @@ footer section h2 {
 footer {
   padding: 1rem;
   background-color: #323232;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 footer h3 {
   font-size: 1rem;
