--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -252,6 +252,11 @@
         color: $white;
         padding: 0.5rem;
         font-size: 1rem;
+
+        @include tablet {
+          width: 30%;
+          margin-left: auto;
+        }
       }
 
     }
